--- a/style.css
+++ b/style.css
@@ -170,7 +170,8 @@ body::before {
     width: 100%;
     height: 100%;
     pointer-events: none; /* clicks go through */
-    background: url('project/image-Photoroom-15.png') no-repeat center/contain;
+    background: url('project/image-Photoroom-15.png') no-repeat center center;
+    background-size: cover; /* now fills screen */
     z-index: 5; /* behind content but above background */
 }
 
